# kadaclaw

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  package-lock.json  package.json  rspack.config.mjs  tsconfig.json  tsconfig.node-placeholder.d.ts  tsconfig.node.json  调研.md
.github/workflows/: build-desktop.yml
docs/: runtime-validation.md
public/: index.html
scripts/: generate_icons.py  patch_typescript_plugin_css_modules.mjs  smoke_check.sh
skills/alibaba-1688-collector/: SKILL.md  skill.json
skills/chrome-live-operator/: SKILL.md  skill.json
skills/multi-platform-product-benchmark/: SKILL.md  skill.json
skills/product-link-voc-analyzer/: SKILL.md  (+1 more)
src/: App.tsx  AppRoot.css  AppRoot.tsx  index.css  index.tsx  main.tsx  styles.css
src-tauri/: .rustfmt.toml  AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/action/: chat.rs  config.rs  memory.rs  mod.rs  plan.rs  skills.rs  telemetry.rs  tools.rs
src-tauri/src/base/: config.rs  history.rs  memory.rs  mod.rs  models.rs  runtime_config.rs  telemetry.rs
src-tauri/src/base/agent/: context.rs  mod.rs  runtime.rs  stream.rs
src-tauri/src/base/plan/: executor.rs  manager.rs  mod.rs  planner.rs  types.rs
src-tauri/src/base/providers/: anthropic.rs  factory.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/base/skills/: engine.rs  manager.rs  mod.rs
src-tauri/src/base/tools/: browser.rs  exec.rs  fs.rs  memory.rs  mod.rs  registry.rs  web.rs
src-tauri/src/base/tools/mcp/: client.rs  manager.rs  mod.rs
src-tauri/src/share/: agent.rs  mod.rs  provider.rs  skills.rs
src-tauri/src/util/: constants.rs  error.rs  fs.rs  mod.rs  sse.rs
(+187 files in other folders)
