[package]
name = "kadaclaw"
version = "0.1.0"
description = "Kadaclaw desktop shell for OpenClaw"
authors = ["zfp"]
edition = "2021"

[lib]
name = "kadaclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = [] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
