[package]
name = "kadaclaw"
version = "0.1.0"
description = "Kadaclaw desktop application"
authors = ["zfp"]
edition = "2021"

[lib]
name = "kadaclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = [] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }

# async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
futures-util = "0.3"

# tools
regex = "1"
scraper = "0.22"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
html5ever = "0.27"

# skills
rhai = { version = "1", features = ["sync"] }

# utilities
urlencoding = "2"
dirs-next = "2"
tracing = "0.1"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
